Resume work on pathfinding, add some options and document some bugs.