@@ -15,8 +15,10 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public abstract class PathNavigator {
 
@@ -29,16 +31,22 @@ public abstract class PathNavigator {
     protected List<PathPoint> pathPoints = List.of();
     protected int currentIndex = 0;
 
-    // set-up the default options for pathfinding completion
+    // set up the default options for pathfinding completion (or best effort completion)
     private int completionRange = 1;
     private Runnable completionCallback = () -> {
     };
+    private Runnable bestEffortCompletionCallback = () -> {
+    };
+
+    // allows users to cancel pathfinding whenever they want
+    private final AtomicBoolean cancelPathfindingFlag;
 
     public PathNavigator(@NotNull EntityMob entityMob,
                          @NotNull Pathfinder pathfinder) {
         this.entityMob = entityMob;
         this.pathfinder = pathfinder;
         this.currentPath = null;
+        this.cancelPathfindingFlag = new AtomicBoolean();
     }
 
     public PathNavigator(@NotNull EntityMob entityMob) {
@@ -52,46 +60,61 @@ public abstract class PathNavigator {
         if (entityMob.isDead())
             return;
 
-        if (currentPath == null)
+        // don't perform any navigation if the path is null or if it failed to find any paths
+        if (currentPath == null || currentPath.state() == Path.State.FAILED)
             return;
 
-        // check if the mob is within the completion distance of the path's end point
-        if (entityMob.getPosition().manhattanDistance(currentPath.end()) <= completionRange) {
-            completionCallback.run();
-            clearPath();
-            return;
+        // check for completion, whether it be to the end point or the best effort point
+        if (currentPath.state() == Path.State.FOUND) {
+            // check if the mob is within the completion distance of the path's end point
+            if (entityMob.getPosition().manhattanDistance(currentPath.end()) <= completionRange) {
+                completionCallback.run();
+                clearPath();
+                return;
+            }
+        } else {
+            // check if the mob is within the completion distance of the path's best effort point
+            final PathPoint bestEffort = currentPath.positions().getLast();
+            if (entityMob.getPosition().manhattanDistance(bestEffort.point()) <= completionRange) {
+                bestEffortCompletionCallback.run();
+                clearPath();
+                return;
+            }
         }
 
+        // make the mob actually move around the terrain
         navigatePath();
     }
 
     public CompletableFuture<Path> setPath(Point target,
                                            int completionRange,
-                                           Runnable completionCallback) {
+                                           Runnable completionCallback,
+                                           Runnable bestEffortCompletionCallback) {
         final Instance instance = entityMob.getInstance();
         final Point position = entityMob.getPosition();
 
         // can't path outside the world border
         final WorldBorder worldBorder = instance.getWorldBorder();
         if (!worldBorder.inBounds(target)) {
-            return CompletableFuture.completedFuture(new Path(Path.State.FAILED, List.of(), position, target));
+            return CompletableFuture.completedFuture(new Path(Path.State.FAILED, Collections.emptyList(), position, target));
         }
 
-        // TODO: do we need this with the block batches, or maybe load all chunks when pathfinding?
         // can't path in an unloaded chunk
         final Chunk chunk = instance.getChunkAt(target);
         if (!ChunkUtils.isLoaded(chunk)) {
-            return CompletableFuture.completedFuture(new Path(Path.State.FAILED, List.of(), position, target));
+            return CompletableFuture.completedFuture(new Path(Path.State.FAILED, Collections.emptyList(), position, target));
         }
 
-        final CompletableFuture<Path> pathFuture = pathfinder.findPath(
+        cancelPathfindingFlag.set(false);
+        final CompletableFuture<Path> futurePath = pathfinder.findPath(
                 position,
                 target,
                 new MobContext(instance, entityMob.getBoundingBox(), entityMob.getAttributeValue(Attribute.SAFE_FALL_DISTANCE)),
-                completionRange
+                completionRange,
+                cancelPathfindingFlag
         );
 
-        pathFuture.whenComplete((path, throwable) -> {
+        futurePath.whenComplete((path, throwable) -> {
             if (throwable != null) {
                 throwable.printStackTrace();
                 return;
@@ -99,20 +122,22 @@ public abstract class PathNavigator {
 
             synchronized (this) {
                 this.currentIndex = 0;
-                this.pathPoints = path.list();
+                this.pathPoints = path.positions();
                 this.completionRange = completionRange;
                 this.completionCallback = completionCallback;
+                this.bestEffortCompletionCallback = bestEffortCompletionCallback;
                 this.currentPath = path;
             }
         });
 
-        return pathFuture;
+        return futurePath;
     }
 
     /**
      * Clears the mob's current path which forces it to stop navigating the path.
      */
     public synchronized void clearPath() {
+        this.cancelPathfindingFlag.set(true);
         this.currentPath = null;
         this.currentIndex = 0;
         this.pathPoints = List.of();
